[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/mobile_control/ui_blaster.gd" type="Script" id=1]
[ext_resource path="res://scenes/mobile_control/Confirm.gd" type="Script" id=2]
[ext_resource path="res://scenes/mobile_control/roll_attack.gd" type="Script" id=3]
[ext_resource path="res://assets/Images/MobileButtons/key_blue_up.png" type="Texture" id=4]
[ext_resource path="res://scenes/mobile_control/left.gd" type="Script" id=5]
[ext_resource path="res://scenes/mobile_control/right.gd" type="Script" id=6]
[ext_resource path="res://scenes/mobile_control/Pause.gd" type="Script" id=7]
[ext_resource path="res://assets/Images/MobileButtons/key_blue_right.png" type="Texture" id=8]
[ext_resource path="res://assets/Images/MobileButtons/key_blue_left_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/Images/MobileButtons/key_blue_x.png" type="Texture" id=10]
[ext_resource path="res://assets/Images/MobileButtons/key_blue_right_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/Images/MobileButtons/key_blue_pause.png" type="Texture" id=12]
[ext_resource path="res://assets/Images/MobileButtons/key_blue_pause_pressed.png" type="Texture" id=13]
[ext_resource path="res://assets/Images/MobileButtons/key_blue_z.png" type="Texture" id=14]
[ext_resource path="res://assets/Images/MobileButtons/key_blue_x_pressed.png" type="Texture" id=15]
[ext_resource path="res://assets/Images/MobileButtons/key_blue_up_pressed.png" type="Texture" id=16]
[ext_resource path="res://assets/Images/MobileButtons/key_blue_z_pressed.png" type="Texture" id=17]
[ext_resource path="res://assets/Images/MobileButtons/key_blue_left.png" type="Texture" id=18]
[ext_resource path="res://scenes/mobile_control/mobile_control.gd" type="Script" id=19]

[node name="MobileControl" type="Node2D"]
script = ExtResource( 19 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Pause" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 640, 8 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 12 )
pressed = ExtResource( 13 )
script = ExtResource( 7 )
default_position = Vector2( 640, 8 )
bonus_stage_position = Vector2( 728, 96 )

[node name="Button" type="Button" parent="CanvasLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="Confirm" type="TouchScreenButton" parent="CanvasLayer/Buttons"]
position = Vector2( 712, 360 )
scale = Vector2( 2, 2 )
normal = ExtResource( 4 )
pressed = ExtResource( 16 )
action = "ui_accept"
script = ExtResource( 2 )

[node name="roll_attack" type="TouchScreenButton" parent="CanvasLayer/Buttons"]
position = Vector2( 632, 360 )
scale = Vector2( 2, 2 )
normal = ExtResource( 14 )
pressed = ExtResource( 17 )
script = ExtResource( 3 )

[node name="ui_blaster" type="TouchScreenButton" parent="CanvasLayer/Buttons"]
position = Vector2( 712, 280 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
pressed = ExtResource( 15 )
script = ExtResource( 1 )

[node name="right" type="TouchScreenButton" parent="CanvasLayer/Buttons"]
position = Vector2( 104, 360 )
scale = Vector2( 2, 2 )
normal = ExtResource( 8 )
pressed = ExtResource( 11 )
script = ExtResource( 6 )

[node name="left" type="TouchScreenButton" parent="CanvasLayer/Buttons"]
position = Vector2( 24, 360 )
scale = Vector2( 2, 2 )
normal = ExtResource( 18 )
pressed = ExtResource( 9 )
script = ExtResource( 5 )
[connection signal="pressed" from="CanvasLayer/Pause" to="CanvasLayer/Pause" method="_on_Pause_pressed"]
[connection signal="released" from="CanvasLayer/Pause" to="CanvasLayer/Pause" method="_on_Pause_released"]
[connection signal="pressed" from="CanvasLayer/Pause/Button" to="CanvasLayer/Pause" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Confirm" to="CanvasLayer/Buttons/Confirm" method="_on_Confirm_pressed"]
[connection signal="released" from="CanvasLayer/Buttons/Confirm" to="CanvasLayer/Buttons/Confirm" method="_on_Confirm_released"]
[connection signal="pressed" from="CanvasLayer/Buttons/roll_attack" to="CanvasLayer/Buttons/roll_attack" method="_on_roll_attack_pressed"]
[connection signal="released" from="CanvasLayer/Buttons/roll_attack" to="CanvasLayer/Buttons/roll_attack" method="_on_roll_attack_released"]
[connection signal="pressed" from="CanvasLayer/Buttons/ui_blaster" to="CanvasLayer/Buttons/ui_blaster" method="_on_ui_blaster_pressed"]
[connection signal="released" from="CanvasLayer/Buttons/ui_blaster" to="CanvasLayer/Buttons/ui_blaster" method="_on_ui_blaster_released"]
[connection signal="pressed" from="CanvasLayer/Buttons/right" to="CanvasLayer/Buttons/right" method="_on_right_pressed"]
[connection signal="released" from="CanvasLayer/Buttons/right" to="CanvasLayer/Buttons/right" method="_on_right_released"]
[connection signal="pressed" from="CanvasLayer/Buttons/left" to="CanvasLayer/Buttons/left" method="_on_left_pressed"]
[connection signal="released" from="CanvasLayer/Buttons/left" to="CanvasLayer/Buttons/left" method="_on_left_released"]
